# jinja2static

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/jinja2static/: __init__.py  assets.py  build.py  config.py  data.py  files.py  logger.py  meta.py  serve.py  server.py  templates.py  watch.py  watcher.py
src/jinja2static/data/: __init__.py  helpers.py
src/jinja2static/init/: __init__.py  __main__.py  pyproject.toml
src/jinja2static/init/templates/: index.html
tests/: conftest.py  test_build.py  test_watch.py
