
[project]
name = "jinja2static"
version = "1.0.0"
authors = [
    { name = "Michael Airola", email = "me@michaelairola.com" }
]
description = "A simple static file generator based off of the Jinja templating language."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "Jinja2>=3.1.6",
    "PyYaml>=6.0.3",
    "watchfiles",
    "tomli; python_version < '3.11'"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "isort",
    "twine",
    "build"
]

[project.scripts]
jinja2static = "jinja2static:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
